# RLCV4

./: .gitignore  CLAUDE.md  README.md
.claude/commands/: commit-push.md
PCB/rlcv4/: 12V.kicad_sch  3V3.kicad_sch  DMX512.kicad_sch  fan.kicad_sch  led.kicad_sch  mcu.kicad_sch  oled_display.kicad_sch  power.kicad_sch  power_12V.kicad_sch  power_3V3.kicad_sch  rlcv4.kicad_pro  rlcv4.kicad_sch  rotary_encoder.kicad_sch  temp_sensor.kicad_sch  userIO.kicad_sch
documentation/Latex/: .latexmkrc  CLAUDE.md  main.tex
documentation/Latex/sections/: hardware_design.tex  introduction.tex  requirements.tex  software_architecture.tex  system_architecture.tex
documentation/pygments_style/: rlcv4_style.py  setup.cfg
documentation/pygments_style/rlcv4_pygments_style.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
