[metadata]
name = rlcv4-pygments-style
version = 1.0.0
description = Pygments style matching the RLCV4 document colour theme

[options]
packages = rlcv4_pygments_style
package_dir =
    rlcv4_pygments_style = .

[options.entry_points]
pygments.styles =
    rlcv4 = rlcv4_pygments_style.rlcv4_style:RefinedStyle
